cleaned up test class CddUnitTest, added initial edge for sink computation in ComplementPea