@@ -20,7 +20,8 @@ import de.uni_freiburg.informatik.ultimate.lib.pea.RangeDecision;
 import de.uni_freiburg.informatik.ultimate.util.datastructures.relation.Pair;
 
 /** 
- * Tests for the function getDecisions(CDD cdd) implemented by me in the Class CDD as part of my bachelors Thesis.
+ * Tests for the function getDecisionsConjunction(CDD cdd) implemented by me in the Class CDD as part of my bachelors thesis.
+ * 
  * @author lena
  */
 @RunWith(JUnit4.class)
@@ -28,83 +29,13 @@ public class CddUnitTest {
 	
 	ArrayList<Pair<CDD, HashMap<String, Pair<Decision<?>, int[]>>>> mTestCases;
 	
-	ArrayList<CDD> mTestCddsTest3;
-	ArrayList<Decision<?>> mExpectedTest3;
-	CDD mTestCddTest4;
-	ArrayList<Decision<?>> mExpectedTest4;
-	
-	CDD mCDDTest2;
-	ArrayList<Pair<Decision<?>, int[]>> mExpected2;
-	HashMap<String, Pair<Decision<?>, int[]>> mExpected2HashMap;
-	
-	public CddUnitTest() {
-		mTestCddsTest3 = new ArrayList<CDD>();
-		mExpectedTest3 = new ArrayList<Decision<?>>();
-		mExpectedTest4 = new ArrayList<Decision<?>>();
-		mExpected2 = new ArrayList<Pair<Decision<?>, int[]>>();
-		mExpected2HashMap = new HashMap<>();
-		createTestCDDsTest3();
-		createTestCDDTest4();
-		
-		
-		
+	public CddUnitTest() {		
 		mTestCases = new ArrayList<Pair<CDD, HashMap<String, Pair<Decision<?>, int[]>>>>();
 		createTestCase0();
-		createTestCase1();
 		
 	}
 	
-	public void createTestCDDsTest3() {
-		// c1 <= 5
-		CDD c1 = RangeDecision.create("c1", RangeDecision.OP_LTEQ, 5);
-		mTestCddsTest3.add(c1);
-		mExpectedTest3.add(c1.getDecision());
 		
-		// c2 >= 5
-		CDD c2 = RangeDecision.create("c2", RangeDecision.OP_GTEQ, 5);
-		mTestCddsTest3.add(c2);
-		mExpectedTest3.add(c2.getDecision());
-		
-		// c3 < 5
-		CDD c3 = RangeDecision.create("c3", RangeDecision.OP_LT, 5);
-		mTestCddsTest3.add(c3);
-		mExpectedTest3.add(c3.getDecision());
-		
-		// c4 > 5
-		CDD c4 = RangeDecision.create("c4", RangeDecision.OP_GT, 5);
-		mTestCddsTest3.add(c4);
-		mExpectedTest3.add(c4.getDecision());
-	}
-	
-	public void createTestCDDTest4() {
-		CDD a = BooleanDecision.create("a");
-		CDD b = BooleanDecision.create("b");
-		
-		mExpectedTest4.add(a.getDecision());
-		mExpectedTest4.add(b.getDecision());
-		
-		CDD c1 = mTestCddsTest3.get(0);
-		CDD c2 = mTestCddsTest3.get(1);
-		CDD c3 = mTestCddsTest3.get(2);
-		CDD c4 = mTestCddsTest3.get(3);
- 
-		mExpectedTest4.add(c1.getDecision());
-		mExpectedTest4.add(c2.getDecision());
-		
-		CDD c5 = RangeDecision.create("c5", RangeDecision.OP_GT, 5);
-		CDD c6 = RangeDecision.create("c6", RangeDecision.OP_GT, 5);
-		CDD c7 = RangeDecision.create("c7", RangeDecision.OP_GT, 5);
-		
-		CDD conjunctionGTCdd = c5.and(c7).and(c7);
-		
-		CDD subCDD1 = c2.and(c1);
-		CDD subCDD2 = c3.and(c4);
-		
-		mTestCddTest4 = subCDD1.or(subCDD2); 
-		CDD testCddTest4DNF = mTestCddTest4.toDNF_CDD();
-		CDD conjunctions[] = mTestCddTest4.toDNF();
-	}
-	
 	public void createTestCase0() {
 		HashMap<String, Pair<Decision<?>, int[]>> expected = new HashMap<String, Pair<Decision<?>, int[]>>();
 		
@@ -144,25 +75,28 @@ public class CddUnitTest {
 		mTestCases.add(testCase);
 	}
 	
-	public void createTestCase1() {
-		CDD c1 = RangeDecision.create("c1", RangeDecision.OP_LT, 5);
-		mExpected2.add(new Pair<Decision<?>, int[]>(c1.getDecision(),new int[] {0}));
-		CDD c2 = RangeDecision.create("c2", RangeDecision.OP_GT, 5);
-		mExpected2.add(new Pair<Decision<?>, int[]>(c2.getDecision(), new int[] {1}));
-		CDD c3 = RangeDecision.create("c3", RangeDecision.OP_EQ, 5);
-		mExpected2.add(new Pair<Decision<?>, int[]>(c3.getDecision(), new int[] {1}));
-		CDD c4 = RangeDecision.create("c4", RangeDecision.OP_EQ, 5);
-		mExpected2.add(new Pair<Decision<?>, int[]>(c4.getDecision(), new int[] {1}));
-		CDD c5 = RangeDecision.create("c6", RangeDecision.OP_NEQ, 5);
-		mExpected2.add(new Pair<Decision<?>, int[]>(c5.getDecision(), new int[] {0,2}));
-		
-		mCDDTest2 = c1.and(c5).and(c2).and(c4).and(c3);
-		
-		for (Pair<Decision<?>, int[]> Pair : mExpected2) {
-			mExpected2HashMap.put(Pair.getFirst().getVar(), Pair);
+	
+	@Test
+	/***
+	 * TestCDD: a && !b && c5 >= 5 && c6 <= 5 && c7 == 5  && c8 != 5
+	 * expected: [(a, [0]) (b, [1]), (c5, [1]), (c6, [0]), (c7, [1]), (c8, [0, 2])]
+	 * 
+	 */
+	public void getDecisionConjunctionTest0() {
+		Pair<CDD, HashMap<String, Pair<Decision<?>, int[]>>>  testCase = mTestCases.get(0);
+		CDD testCDD = testCase.getFirst();
+		HashMap<String, Pair<Decision<?>, int[] >> expected = testCase.getSecond();
+		ArrayList<Pair<Decision<?>, int[]>> actual = testCDD.getDecisionsConjunction();
+		assertEquals(expected.size(), actual.size());
+		for (Pair<Decision<?>, int[]> Pair : actual) {
+			Pair<Decision<?>, int[]> match = expected.get(Pair.getFirst().getVar());
+			Decision<?> expectedfirst = match.getFirst();
+			int[] expectedsecond = match.getSecond();
+			Decision<?> actualFirst = Pair.getFirst();
+			int[] actualSecond = Pair.getSecond();
+			assertEquals(expectedfirst, actualFirst);
+			assertEquals(expectedsecond[0], actualSecond[0]);
 		}
-		
-		
 	}
 	
 	@Test
@@ -172,18 +106,5 @@ public class CddUnitTest {
 	}
 	
 	
-	@Test
-	public void getDecisionConjunctionTest2() {
-		ArrayList<Pair<Decision<?>, int[]>> actual = mCDDTest2.getDecisionsConjunction();
-		assertEquals(mExpected2.size(), actual.size());
-		for (Pair<Decision<?>, int[]> Pair : actual) {
-			Pair<Decision<?>, int[]> match = mExpected2HashMap.get(Pair.getFirst().getVar());
-			Decision<?> expectedfirst = match.getFirst();
-			int[] expectedsecond = match.getSecond();
-			Decision<?> actualFirst = Pair.getFirst();
-			int[] actualSecond = Pair.getSecond();
-			assertEquals(expectedfirst, actualFirst);
-			assertEquals(expectedsecond[0], actualSecond[0]);
-		}
-	}
+
 }
